- make formatXiB() handle negative numbers (for rpmdrake)

Version 10.4.208 - 21 September 2007, by Olivier "blino" Blin

- service_harddrake:
  o do not auto-configure CD-Rom drives in fstab, it fordbids
    umounting with hal (install does not configure them in fstab either)
  o automatically configure harddisks
- finish-install:
  o write autologin settings after user creation only
    (so that home is set and exists, should partly fix GNOME autologin)
  o config first user to autologin if USER_AUTOLOGIN_FIRST is "yes"
  o read gdm autologin settings
- drakupdate_fstab: allow to configure harddisks

Version 10.4.207 - 21 September 2007, by Thierry Vignaud

- drakboot:
  o create .dmrc with mode 0644 for gdm (#33774)
- harddrake:
  o fix listing DVD/CD as them and as unknown (#33366)
  o stop offering to run drakxtv
- localedrake:
  o default input method is now scim-bridge (#32138)

Version 10.4.203 - 19 September 2007, by Thierry Vignaud

- diskdrake:
  o "Clear All" defaults to LVM on full disk if drive is >4TB
  o do not allow partitions bigger than 2TB-1 on DOS MBR, nor partitions
    starting above 2TB-1
- bootloader-config:
  o handle /boot/xxx files on linux raid1
- fix getting UUID on mdmadm (eg: md0) devices
- getInputDevices(): keep "Bus=..." for drakx-kbd-mouse-x11

Version 10.4.202 - 17 September 2007, by Thierry Vignaud

- localedrake menu entries (#32941):
  o hide system config
  o make them more understandable

Version 10.4.200 - 17 September 2007, by Thierry Vignaud

- only run "chksession -l" if needed
- bootloader-config:
  o --rebuild-initrds: don't choke on kernel files which have no version in
    file name (#28772)
- drakboot:
  o boot entrie list uses ellipsis rather than scroll bar
- harddrake2:
  o display model & vendor for SCSI devices too

Version 10.4.198 - 16 September 2007, by Thierry Vignaud

- fix a crash
- localedrake:
  o install scim-bridge-qt4 if KDE4 is installed

Version 10.4.197 - 15 September 2007, by Thierry Vignaud
