@@ -1,4 +1,8 @@
 - make formatXiB() handle negative numbers (for rpmdrake)
+- service_harddrake:
+  o auto-configure CD-Rom drives in fstab again (even if it prevents
+    KDE media manager from unmounting them), to be consistent with
+    install which actually configures CD-Rom drives in fstab
 
 Version 10.4.208 - 21 September 2007, by Olivier "blino" Blin
 
